# my-recipe

./: LICENSE  README.md  final_recipes.md  pyproject.toml  recipes.md  report.md
src/my_recipe/: crew.py  main.py
src/recipe_generator/: crew.py  main.py
src/recipe_generator/config/: agents.yaml  tasks.yaml
