[project]
name = "recipe_generator"
version = "0.1.0"
description = "Recipe Generation using CrewAI Multi-Agent System"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
recipe_generator = "recipe_generator.main:run"
run_crew = "recipe_generator.main:run"
train = "recipe_generator.main:train"
replay = "recipe_generator.main:replay"
test = "recipe_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
